# mcp-laravel-python

./: README.md  deploy-pypi.md  pyproject.toml
mcp_laravel/: app.py
mcp_laravel/services/: routes_service.py
mcp_laravel/templates/: contract.py  controller.py  eloquent.py  request.py  resource.py
mcp_laravel/tools/: controller.py  repositories.py
mcp_laravel/utils/: path_finder.py  php_parser.py  provider_updater.py
